--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bf7eae">  <td>22/12/13 16:53:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.TearDown()[pri:0, instance:com.PersonalLinesInsurance.TestClasses.TC_03VerifyHowOldEachMember@4b5a5ed1]">&lt;&lt;TearDown</td> 
+<tr bgcolor="bf7eae">  <td>22/12/21 23:39:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.TearDown()[pri:0, instance:com.PersonalLinesInsurance.TestClasses.TC_04VerifyWhereDoYouLiveTestClass@4b5a5ed1]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="9fcf7f">  <td>22/12/13 16:53:02</td>   <td>-3302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03VerifyHowOldEachMember.verifyAgeFunctionality()[pri:0, instance:com.PersonalLinesInsurance.TestClasses.TC_03VerifyHowOldEachMember@4b5a5ed1]">verifyAgeFunctionality</td> 
+<tr bgcolor="9fcf7f">  <td>22/12/21 23:39:14</td>   <td>-6171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04VerifyWhereDoYouLiveTestClass.VerfiyCityFunctionality()[pri:0, instance:com.PersonalLinesInsurance.TestClasses.TC_04VerifyWhereDoYouLiveTestClass@4b5a5ed1]">VerfiyCityFunctionality</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="bf7eae">  <td>22/12/13 16:52:56</td>   <td>-8885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.SetUp()[pri:0, instance:com.PersonalLinesInsurance.TestClasses.TC_03VerifyHowOldEachMember@4b5a5ed1]">&gt;&gt;SetUp</td> 
+<tr bgcolor="bf7eae">  <td>22/12/21 23:39:09</td>   <td>-11382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.SetUp()[pri:0, instance:com.PersonalLinesInsurance.TestClasses.TC_04VerifyWhereDoYouLiveTestClass@4b5a5ed1]">&gt;&gt;SetUp</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
 </table>
