--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.PersonalLinesInsurance.TestClasses.TC_03VerifyHowOldEachMember</td>
+<td>com.PersonalLinesInsurance.TestClasses.TC_04VerifyWhereDoYouLiveTestClass</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAgeFunctionality</td>
+<td>VerfiyCityFunctionality</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
